bloodc/src/parser/snapshots/bloodc__parser__tests__const_decl.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Const(
            ConstDecl {
                attrs: [],
                vis: Private,
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 6,
                        end: 8,
                        start_line: 1,
                        start_col: 7,
                    },
                },
                ty: Type {
                    kind: Path(
                        TypePath {
                            segments: [
                                TypePathSegment {
                                    name: Spanned {
                                        node: SymbolU32 {
                                            value: 2,
                                        },
                                        span: Span {
                                            start: 10,
                                            end: 13,
                                            start_line: 1,
                                            start_col: 11,
                                        },
                                    },
                                    args: None,
                                },
                            ],
                            span: Span {
                                start: 10,
                                end: 13,
                                start_line: 1,
                                start_col: 11,
                            },
                        },
                    ),
                    span: Span {
                        start: 10,
                        end: 13,
                        start_line: 1,
                        start_col: 11,
                    },
                },
                value: Expr {
                    kind: Literal(
                        Literal {
                            kind: Float {
                                value: OrderedFloat(
                                    3.14159,
                                ),
                                suffix: None,
                            },
                            span: Span {
                                start: 16,
                                end: 23,
                                start_line: 1,
                                start_col: 17,
                            },
                        },
                    ),
                    span: Span {
                        start: 16,
                        end: 23,
                        start_line: 1,
                        start_col: 17,
                    },
                },
                span: Span {
                    start: 0,
                    end: 24,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 24,
        start_line: 1,
        start_col: 1,
    },
}
