bloodc/src/parser/snapshots/bloodc__parser__tests__const_generic_array.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Struct(
            StructDecl {
                attrs: [],
                vis: Private,
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 7,
                        end: 12,
                        start_line: 1,
                        start_col: 8,
                    },
                },
                type_params: Some(
                    TypeParams {
                        params: [
                            Type(
                                TypeParam {
                                    name: Spanned {
                                        node: SymbolU32 {
                                            value: 2,
                                        },
                                        span: Span {
                                            start: 13,
                                            end: 14,
                                            start_line: 1,
                                            start_col: 14,
                                        },
                                    },
                                    bounds: [],
                                    default: None,
                                    span: Span {
                                        start: 13,
                                        end: 14,
                                        start_line: 1,
                                        start_col: 14,
                                    },
                                },
                            ),
                            Const(
                                ConstParam {
                                    name: Spanned {
                                        node: SymbolU32 {
                                            value: 3,
                                        },
                                        span: Span {
                                            start: 22,
                                            end: 23,
                                            start_line: 1,
                                            start_col: 23,
                                        },
                                    },
                                    ty: Type {
                                        kind: Path(
                                            TypePath {
                                                segments: [
                                                    TypePathSegment {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 4,
                                                            },
                                                            span: Span {
                                                                start: 25,
                                                                end: 30,
                                                                start_line: 1,
                                                                start_col: 26,
                                                            },
                                                        },
                                                        args: None,
                                                    },
                                                ],
                                                span: Span {
                                                    start: 25,
                                                    end: 30,
                                                    start_line: 1,
                                                    start_col: 26,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 25,
                                            end: 30,
                                            start_line: 1,
                                            start_col: 26,
                                        },
                                    },
                                    span: Span {
                                        start: 16,
                                        end: 30,
                                        start_line: 1,
                                        start_col: 17,
                                    },
                                },
                            ),
                        ],
                        span: Span {
                            start: 12,
                            end: 31,
                            start_line: 1,
                            start_col: 13,
                        },
                    },
                ),
                body: Record(
                    [
                        StructField {
                            attrs: [],
                            vis: Private,
                            name: Spanned {
                                node: SymbolU32 {
                                    value: 5,
                                },
                                span: Span {
                                    start: 34,
                                    end: 38,
                                    start_line: 1,
                                    start_col: 35,
                                },
                            },
                            ty: Type {
                                kind: Path(
                                    TypePath {
                                        segments: [
                                            TypePathSegment {
                                                name: Spanned {
                                                    node: SymbolU32 {
                                                        value: 2,
                                                    },
                                                    span: Span {
                                                        start: 40,
                                                        end: 41,
                                                        start_line: 1,
                                                        start_col: 41,
                                                    },
                                                },
                                                args: None,
                                            },
                                        ],
                                        span: Span {
                                            start: 40,
                                            end: 41,
                                            start_line: 1,
                                            start_col: 41,
                                        },
                                    },
                                ),
                                span: Span {
                                    start: 40,
                                    end: 41,
                                    start_line: 1,
                                    start_col: 41,
                                },
                            },
                            span: Span {
                                start: 34,
                                end: 41,
                                start_line: 1,
                                start_col: 35,
                            },
                        },
                    ],
                ),
                span: Span {
                    start: 0,
                    end: 43,
                    start_line: 1,
                    start_col: 1,
                },
                is_union: false,
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 43,
        start_line: 1,
        start_col: 1,
    },
}
